--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports:
+      - "3606:3606"
     environment:
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: loja
