--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -7,7 +7,16 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
-      - "3606:3606"
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: loja
+      MYSQL_DATABASE: base
+    volumes:
+      - local-data:/var/lib/mysql
+volumes:
+  local-data:
+    driver: local
+    driver_opts:
+      type: nfs
+      device: /dockers/mysql/data
+      o: bind
